# cloudfit-provider-gcp

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
cloudfit-provider-gcp/: pricing.py  provider.py  regions.py  registry.py
cloudfit_provider_gcp/: __init__.py  normalizer.py  pricing.py  provider.py
examples/: recommend.py  recommend_offline.py
tests/: test_normalizer.py  test_regions.py
tests/fixtures/: machine_type_response.json
