[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudfit-provider-gcp"
version = "0.1.0"
description = "GCP Compute Engine provider plugin for cloudfit-core"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Chaitanya Krishna Kasaraneni", email = "kc.kasaraneni@gmail.com" }
]
keywords = [
  "cloud", "gcp", "google-cloud", "machine-type",
  "bioinformatics", "cloudfit", "instance-recommendation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
  "cloudfit-core>=0.1.0",
  "google-cloud-compute>=1.14.0",
  "google-cloud-billing>=1.11.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
registry = [
  "psycopg2-binary>=2.9",
  "sqlalchemy>=2.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
  "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/cloudfit-io/cloudfit-provider-gcp"
Repository = "https://github.com/cloudfit-io/cloudfit-provider-gcp"
"Bug Tracker" = "https://github.com/cloudfit-io/cloudfit-provider-gcp/issues"
ORCID = "https://orcid.org/0000-0001-5792-1095"

[tool.hatch.build.targets.wheel]
packages = ["cloudfit_provider_gcp"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
